# gestionscolaire

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  AUDIT_ECARTS.md  AUDIT_FRONTEND.md  CHANGELOG_FRONTEND.md  DEPLOY.md  MONOREPO.md  PLAN_REMEDIATION.md  README.md  docker-compose.override.example.yml  docker-compose.yml  dockerfile
Doc_RoyalPriestHood/: professeurs.example.json
backend/: requirements.txt
deploy-data/: README.md  import_school_excel_report.json  master.db
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
infra/: .env.example  docker-compose.yml
libs/common/: pyproject.toml
libs/common/common/: __init__.py  appreciation_scales.py  bulletin_layout.py  bulletin_theme.py  config.py  db.py  establishment.py  events.py  http_client.py  jwt.py  personnel_roles.py  phone.py  roles.py  security.py  service.py  subsystem.py  tenant.py
libs/common/common/progression/: __init__.py  criteria.py  engine.py  types.py
libs/common/tests/: test_subsystem.py
scripts/: backup-db.ps1  backup-db.sh  create-desktop-shortcut.ps1  create-desktop-shortcut.sh  create-establishment-admin.sh  docker-entrypoint.sh  ensure-postgres-databases.sh  fix-class-subsystems.py  fix-hostinger-nginx.sh  fix-teacher-tenant-ids.sh  generate-pwa-icons.py  import_royal_priesthood.py  import_royal_priesthood_notes.py  import_school_excel.py  launch-edugestion.bat  list-accounts.sh  reset-account-password.sh  reset_royal_priesthood.py  restore-db.ps1  restore-db.sh  seed-superadmin.sh  (+6 more)
(+318 files in other folders)
