[project]
name = "gs-common"
version = "0.1.0"
description = "Bibliothèque partagée des microservices SaaS Scolaire (JWT, multi-tenant/RLS, DB, events RabbitMQ, client HTTP interne)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pika>=1.3",
    "redis>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*"]
